[gd_scene load_steps=10 format=3 uid="uid://muputklnbpx6"]

[ext_resource type="Script" uid="uid://blg5pw1mqe4pa" path="res://scripts/environment/pickup_items/coin.gd" id="1_0van4"]
[ext_resource type="Texture2D" uid="uid://cd5gp13j16k2d" path="res://assets/sprites/pickup_items/coin_1.png" id="1_yonsr"]
[ext_resource type="AudioStream" uid="uid://be27w5wn80l8k" path="res://assets/sounds/sfx/retro_coin.wav" id="4_6rsou"]

[sub_resource type="AtlasTexture" id="AtlasTexture_boldp"]
atlas = ExtResource("1_yonsr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0van4"]
atlas = ExtResource("1_yonsr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rsou"]
atlas = ExtResource("1_yonsr")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_go8sj"]
atlas = ExtResource("1_yonsr")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5iuka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_boldp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0van4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rsou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go8sj")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_0van4"]
size = Vector3(0.2, 0.2, 0.2)

[node name="Coin" type="Node3D"]
script = ExtResource("1_0van4")

[node name="Animation" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_5iuka")
autoplay = "default"
frame_progress = 0.774405

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_6rsou")
bus = &"SFX"

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="InteractionCollision" type="CollisionShape3D" parent="InteractionArea"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_0van4")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
